--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^0.10.3",
